--- a/package.json
+++ b/package.json
@@ -9,14 +9,21 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "axios": "^1.11.0",
+    "bcrypt": "^6.0.0",
+    "firebase": "^12.1.0",
     "lucide-react": "^0.540.0",
     "mongodb": "^6.18.0",
     "next": "15.5.0",
+    "next-auth": "^4.24.11",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-hook-form": "^7.62.0",
+    "react-hot-toast": "^2.6.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@netlify/plugin-nextjs": "^5.12.1",
     "@tailwindcss/postcss": "^4.1.12",
     "autoprefixer": "^10.4.21",
     "daisyui": "^5.0.50",
